<resources>
    <string name="app_name">WhatsApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="status_privacy">Status privacy</string>
    <string name="setting">Setting</string>
    <string name="new_group">New group</string>
    <string name="new_broadcast">New broadcast</string>
    <string name="whatsapp_web">WhatsApp Web</string>
    <string name="starred_message">Starred message</string>
    <string name="clear_call_log">Clear call log</string>
    <string name="setiing">Setiing</string>
</resources>
