<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/new_game"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/new_group"
        android:title="@string/new_group"
        app:showAsAction="never" />
    <item android:id="@+id/new_broadcast"
        android:title="@string/new_broadcast"
        app:showAsAction="never" />
    <item android:id="@+id/whatsapp_web"
        android:title="@string/whatsapp_web"
        app:showAsAction="never" />
    <item android:id="@+id/starred_message"
        android:title="@string/starred_message"
        app:showAsAction="never" />
    <item android:id="@+id/setting"
        android:title="@string/setting"
        app:showAsAction="never" />
</menu>
